Updated pom.xml to use application-native.properties when running application in native mode